--- a/predacao.html
+++ b/predacao.html
@@ -25,15 +25,24 @@
   <div class="conteudo">
     <h1>Predação</h1>
     <div class="texto-colunas">
-      <p>"Predatismo ou predação é uma <b>relação ecológica interespecífica</b>, ou seja, que ocorre entre indivíduos de diferentes <b>espécies</b>, e caracteriza-se pelo fato de uma espécie matar e alimentar-se de um indivíduo de outra espécie.</p>
+      <p>Predatismo ou predação é uma <b>relação ecológica interespecífica</b>, ou seja, que ocorre 
+        entre indivíduos de diferentes <b>espécies</b>, e caracteriza-se pelo fato de uma espécie 
+        matar e alimentar-se de um indivíduo de outra espécie.</p>
 
-      <p>Como um ser vivo mata outro e alimenta-se dele, observa-se a interação <b>predador-presa</b>. O predador é o indivíduo, sendo o outro que serve de alimento, a presa. Por esse motivo essa relação ecológica é classificada como <b>desarmônica</b>.</p>
+      <p>Como um ser vivo mata outro e alimenta-se dele, observa-se a interação <b>predador-presa</b>. 
+        O predador é o indivíduo, sendo o outro que serve de alimento, a presa. Por esse motivo essa 
+        relação ecológica é classificada como <b>desarmônica</b>.</p>
 
-      <p>Os predadores contam geralmente com algumas adaptações que os ajudam a capturar suas presas, como o uso de garras, dentes, bicos, sentidos apurados e técnicas de caça. Já algumas presas contam com características que ajudam a fugir do predador, por exemplo, a vida em bandos.</p>
+      <p>Os predadores contam geralmente com algumas adaptações que os ajudam a capturar suas presas, 
+        como o uso de garras, dentes, bicos, sentidos apurados e técnicas de caça. Já algumas presas 
+        contam com características que ajudam a fugir do predador, por exemplo, a vida em bandos.</p>
+        
+      <p>Denominamos de predadores os organismos que matam e alimentam-se de um indivíduo de outra espécie. 
+        O organismo que serve de alimento é chamado de presa. Tanto predadores quanto presas apresentam 
+        adaptações que possibilitam sucesso em suas atividades diárias.</p>
 
-      <p>Denominamos de predadores os organismos que matam e alimentam-se de um indivíduo de outra espécie. O organismo que serve de alimento é chamado de presa. Tanto predadores quanto presas apresentam adaptações que possibilitam sucesso em suas atividades diárias.</p>
-
-      <p>Na caça, é fundamental que o predador apresente características que aumentem sua eficácia na predação. Já a presa possui características que a ajudam a fugir do predador.</p>
+      <p>Na caça, é fundamental que o predador apresente características que aumentem sua eficácia na 
+        predação. Já a presa possui características que a ajudam a fugir do predador.</p>
     </div>
   </div>
 </body>
