--- a/sobrenos.html
+++ b/sobrenos.html
@@ -5,6 +5,7 @@
   <title>Sobre nós</title>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Italiana&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./CSS/sobrenos.css">
+  <link rel="stylesheet" href="./CSS/cabecalho.css">
 </head>
 <body>
 
