--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MALK - Entenda as Relações entre os Animais</title>
+    <title>MALK - Relações entre os Animais</title>
     <link rel="stylesheet" href="style.css">
     <link rel="logo" href="./Imagens/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <div class="logo">MALK</div>
+        <div class="logo"> <a href="index.html">MALK</a></div>
         <nav>
             <ul>
                 <li><a href="./relacoes.html">Relações</a></li>
@@ -116,8 +116,8 @@ nav ul li a:hover {
   position: relative;
   z-index: 2;
   width: 90%;
-  max-width: 600px;
-  padding: 40px;
+  max-width: 800px;
+  padding: 100px;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
   border-radius: 10px;
@@ -126,7 +126,7 @@ nav ul li a:hover {
 
 .hero-content h1 {
   font-family: "Italiana", serif;
-  font-size: 2.5rem;
+  font-size: 4rem;
   margin-bottom: 20px;
   font-weight: 100;
   color: var(--secondary-color);
@@ -134,7 +134,7 @@ nav ul li a:hover {
 
 .hero-content p {
   font-family: "Montserrat", serif;
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin-bottom: 30px;
 }
 
@@ -414,7 +414,6 @@ footer {
 
     <main class="hero-section">
         <div class="hero-background"></div>
-
         <section class="hero-content">
             <h1>Entenda as Relações entre os animais</h1>
             <p>
