--- a/competicao.html
+++ b/competicao.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./CSS/competição.css">
-  <title>Comunicação</title>
+  <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Comfortaa:wght@400;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+  <title>Competiçao</title>
 </head>
 <body>
-  <!-- Cabeçalho -->
+
   <div class="cabeçalho">
     <nav>
       <a href="./index.html"><img src="./Imagens/logo.png" alt="logo" class="logo"></a> 
@@ -15,9 +16,38 @@
         <li><a href="./relacoes.html" class="active">Relações</a></li>
         <li><a href="./jogo.html">Jogo</a></li>
         <li><a href="./recomendacoes.html">Recomendações</a></li>
-        <li><a href="./sobre.html">Sobre nós</a></li>
+        <li><a href="./sobrenos.html">Sobre nós</a></li>
       </ul>
     </nav>
   </div>
+  <div class="competicao">
+    <h1>Competição</h1>
 
-  <h1>Comunicação</h1>
+<div class="esquerda">
+    <img src="./Imagens/Competição.png" alt="Girafa">
+    <p> A competição é uma relação ecológica que ocorre entre organismos da mesma espécie 
+      ou de espécies diferentes. Dizemos que a competição é intraespecífica quando indivíduos 
+      da mesma espécie estão envolvidos, e que é interespecífica quando se trata de espécies 
+      diferentes. <br><br> No caso de uma competição intraespecífica, os indivíduos podem “lutar” entre 
+      si para conseguir água, alimento, luz, abrigo ou até mesmo uma parceira. São diversas as 
+      espécies de animais em que os machos literalmente brigam entre si para conseguir acasalar. 
+      Nesses casos, o vencedor da luta ganha o direito de reproduzir-se. Vale destacar que não 
+      são apenas os animais que competem por recursos, as plantas, por exemplo, podem também 
+      sofrer com a competição.
+    </p>
+</div>
+<div class="soli">
+    <p>
+      Vale destacar que não são apenas os animais que competem por recursos, as plantas, por exemplo, 
+      podem também sofrer com a competição. Alguns vegetais quando estão muito próximos uns dos outros 
+      podem competir pela água ou até mesmo por luz. Sendo assim, às vezes, é necessária certa distância 
+      para que os indivíduos consigam sobreviver. Quando a competição é interespecífica, as espécies estão 
+      competindo pelos recursos, tais como água e alimento. Nesse caso, ambas as espécies possuem os 
+      mesmos hábitos alimentares e necessitam do mesmo recurso. Como falamos de espécies diferentes, não há 
+      briga por parceiras sexuais. Imagine a savana africana com sua grande quantidade de zebras e gnus, 
+      ambas as espécies são herbívoras e, portanto, competem pelo mesmo recurso
+    </p>
+</div>
+</div>
+</body>
+</html>
