--- a/comunicacao.html
+++ b/comunicacao.html
@@ -1,23 +1,84 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./CSS/comunicacao.css">
-  <title>Competição</title>
-</head>
-<body>
-  <!-- Cabeçalho -->
-  <div class="cabeçalho">
-    <nav>
-      <a href="./index.html"><img src="./Imagens/logo.png" alt="logo" class="logo"></a> 
-      <ul>
-        <li><a href="./relacoes.html" class="active">Relações</a></li>
-        <li><a href="./jogo.html">Jogo</a></li>
-        <li><a href="./recomendacoes.html">Recomendações</a></li>
-        <li><a href="./sobre.html">Sobre nós</a></li>
-      </ul>
-    </nav>
-  </div>
+<html lang="en">
 
-  <h1>Competição</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Italiana&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/comunicacao.css">
+    <link rel="stylesheet" href="./CSS/cabecalho.css">
+    <title>Comunicação</title>
+</head>
+
+<body>
+
+    <div class="cabeçalho">
+        <nav>
+            <a href="./index.html"><img src="./Imagens/logo.png" alt="logo" class="logo"></a>
+            <ul>
+                <li><a href="./relacoes.html" class="active">Relações</a></li>
+                <li><a href="./jogo.html">Jogo</a></li>
+                <li><a href="./recomendacoes.html">Recomendações</a></li>
+                <li><a href="./sobrenos.html">Sobre Nós</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div class="comunicacao">
+        <h1>Comunicação</h1>
+
+        <div class="soli">
+            <p>A comunicação entre seres vivos é um mecanismo essencial para a sobrevivência e o equilíbrio das
+                espécies. Por meio dela, os indivíduos trocam informações importantes que influenciam comportamentos
+                sociais, estratégias de defesa, reprodução e organização em grupo. Existem diversos tipos de
+                comunicação, e cada espécie desenvolve formas específicas para se expressar de acordo com suas
+                necessidades e capacidades.
+            </p>
+        </div>
+
+        <div class="direita">
+            <div>
+                <p>No campo zoológico da etologia,uma hierarquia de dominância (anteriormente e coloquialmente chamada
+                    de hierarquia hierárquica ) é um tipo de hierarquia social que surge quando membros de grupos sociais de animais interagem,
+                    criando um sistema de classificação.
+                </p>
+
+                <strong><p>Comunicaçaõ Visual</p></strong>
+
+                <p>A comunicação visual é uma das formas mais comuns de comunicação entre animais, especialmente em
+                    espécies
+                    que vivem em ambientes onde a visão é bem desenvolvida. Ela ocorre através de gestos, posturas,
+                    cores e
+                    movimentos corporais.</p>
+            </div>
+            <img src="./Imagens/comunicacao.png" alt="comunicacao">
+        </div>
+
+        <div class="esquerda">
+            <div>
+            <strong><p>Exemplos</p></strong>
+            <p>
+                Pavões: O pavão macho exibe sua plumagem colorida e vibrante para atrair as fêmeas durante o período de
+                acasalamento. As cores e os padrões das penas podem indicar saúde e vigor, o que é um sinal de boa
+                genética.
+            </p>
+            </div>
+            <br>
+            
+            <div>
+            <strong><p>Comunicação Sonora</p></strong>
+            <p>
+                A comunicação sonora envolve a emissão de sons para transmitir informações. Esses sons podem ter
+                diversos significados, como chamar a atenção, advertir sobre a presença de predadores, ou marcar o
+                território. A comunicação sonora pode ser muito importante para animais que vivem em ambientes com baixa
+                visibilidade, como florestas densas ou embaixo da água.
+            </p>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
