--- a/jogo.html
+++ b/jogo.html
@@ -17,7 +17,7 @@
         <li><a href="./relacoes.html">Relações</a></li>
         <li><a href="./jogo.html" class="active">Jogo</a></li>
         <li><a href="./recomendacoes.html">Recomendações</a></li>
-        <li><a href="./sobre.html">Sobre nós</a></li>
+        <li><a href="./sobrenos.html">Sobre nós</a></li>
       </ul>
     </nav>
   </div>
