--- a/mutualismo.html
+++ b/mutualismo.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./CSS/mutualismo.css">
+  <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Comfortaa:wght@400;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Mutualismo</title>
 </head>
 <body>
@@ -14,9 +16,51 @@
         <li><a href="./relacoes.html" class="active">Relações</a></li>
         <li><a href="./jogo.html">Jogo</a></li>
         <li><a href="./recomendacoes.html">Recomendações</a></li>
-        <li><a href="./sobre.html">Sobre nós</a></li>
+        <li><a href="./sobrenos.html">Sobre nós</a></li>
       </ul>
     </nav>
   </div>
 
-  <h1>Mutualismo</h1>
+  <div class="mutualismo">
+    <h1>Mutualismo</h1>
+
+  <div class="soli">
+    <p>O mutualismo é um tipo de interação biológica entre duas ou mais espécies que resulta em benefícios mútuos, 
+      ou seja, ambas as partes envolvidas na relação se beneficiam de alguma forma. Essa relação é um exemplo 
+      clássico de cooperação entre organismos de diferentes espécies. O mutualismo é uma das várias formas de 
+      interação entre organismos, que também inclui comensalismo, parasitismo,  competição e outros.
+    </p>
+    
+</div>
+<div class="direita">
+    <p>
+      O mutualismo pode se manifestar de diferentes maneiras, dependendo da natureza da interação e dos benefícios 
+      envolvidos. Aqui estão alguns exemplos de tipos de mutualismo:
+    </p>
+    <img src="./Imagens/Flor_Mutualismo.png" alt="Flor">
+</div>
+
+<div class="soli">
+  <p>
+    1. Mutualismo Trocado ou Recíproco
+    Este é o tipo mais comum de mutualismo, onde ambas as espécies se ajudam mutuamente. Um exemplo clássico é a relação 
+    entre as abelhas e as flores. As abelhas coletam néctar das flores para se alimentar, e, em troca, elas ajudam na 
+    polinização, permitindo que as flores se reproduzam. Ambos se beneficiam da interação: as abelhas ganham comida, e as 
+    flores aumentam suas chances de fertilização.
+  </p>
+</div>
+  
+    <div class="direita">
+      <p>
+        2. Mutualismo Obrigatório
+      Em relações de mutualismo obrigatório, as espécies dependem completamente uma da outra para sobreviver. Um exemplo 
+      clássico desse tipo de interação ocorre entre certos tipos de fungos e algas que formam líquenes. Os fungos fornecem 
+      um ambiente protegido para as algas, enquanto as algas realizam a fotossíntese, fornecendo nutrientes para o fungo. 
+      Sem a presença da outra parte
+      </p>
+    <img src="./Imagens/Caule.png" alt="Caule">
+    </div>
+</div>
+</div>
+</body>
+</html>
