--- a/predacao.html
+++ b/predacao.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./CSS/cabecalho.css">
   <link rel="stylesheet" href="./CSS/predacao.css">
+  <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Comfortaa:wght@400;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Predação</title>
 </head>
 <body>
-  <!-- Cabeçalho -->
+
   <div class="cabeçalho">
     <nav>
       <a href="./index.html"><img src="./Imagens/logo.png" alt="logo" class="logo"></a> 
@@ -16,12 +17,12 @@
         <li><a href="./relacoes.html" class="active">Relações</a></li>
         <li><a href="./jogo.html">Jogo</a></li>
         <li><a href="./recomendacoes.html">Recomendações</a></li>
-        <li><a href="./sobre.html">Sobre nós</a></li>
+        <li><a href="./sobrenos.html">Sobre nós</a></li>
       </ul>
     </nav>
   </div>
 
-  <!-- Conteúdo da página -->
+
   <div class="conteudo">
     <h1>Predação</h1>
     <div class="texto-colunas">
