--- a/simbiose.html
+++ b/simbiose.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./CSS/simbiose.css">
+  <link rel="stylesheet" href="./CSS/cabecalho.css">
+  <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Comfortaa:wght@400;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Simbiose</title>
 </head>
 <body>
-  <!-- Cabeçalho -->
+
   <div class="cabeçalho">
     <nav>
       <a href="./index.html"><img src="./Imagens/logo.png" alt="logo" class="logo"></a> 
@@ -14,9 +17,41 @@
         <li><a href="./relacoes.html" class="active">Relações</a></li>
         <li><a href="./jogo.html">Jogo</a></li>
         <li><a href="./recomendacoes.html">Recomendações</a></li>
-        <li><a href="./sobre.html">Sobre nós</a></li>
+        <li><a href="./sobrenos.html">Sobre nós</a></li>
       </ul>
     </nav>
   </div>
 
-  <h1>Simbiose</h1>
+  <div class="simbiose">
+    <h1>Simbiose</h1>
+
+  <div class="direita">
+    <p>A simbiose pode ser definida como uma associação a longo prazo entre dois organismos de espécies 
+      diferentes seja essa relação benéfica para ambos os indivíduos envolvidos ou não. Todos os animais e 
+      plantas conhecidos estabelecem algum tipo de relação simbiótica.
+    </p>
+    <img src="./Imagens/simbiose_1.png" alt="Nemona">
+</div>
+<div class="soli">
+    <p>
+      No meio científico ainda não há um consenso sobre a definição correta do termo simbiose. Há várias 
+      definições vigentes e há um amplo debate sobre as vantagens e limites de cada definição. Segundo Pradeu 
+      o termo simbiose pode ser definido como qualquer interação a longo prazo entre indivíduos de 
+      diferentes espécies, sendo essa associação evolutivamente benéfica para o hospedeiro e neutra ou benéfica 
+      para o simbionte. Para outros autores, a simbiose pode ser definida de maneira mais ampla, sendo 
+      então uma associação a longo prazo entre dois organismos de diferentes espécies, sendo essa a acepção mais 
+      aceita atualmente.
+    </p>
+</div>
+<div class="esquerda">
+  <img src="./Imagens/simbiose_2.png" alt="Simbiose">
+  <p>
+    Essa última definição difere da primeira de maneira crucial ao desconsiderar os efeitos sobre o fitness dos 
+    envolvidos nessa associação, o que pode ser uma vantagem dada a dificuldade em determinar se certas interações 
+    mais voláteis, isto é, que transitam de um estado para outro, podendo estas serem benéficas, neutras ou 
+    prejudiciais para um dos envolvidos.
+  </p>
+</div>
+</div>
+</body>
+</html>
