--- a/sobrenos.html
+++ b/sobrenos.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 
-  <!-- Cabeçalho já importado pelo @import (não duplicar) -->
   <div class="cabeçalho">
     <nav>
       <a href="./index.html"><img src="./Imagens/logo.png" alt="logo" class="logo"></a> 
@@ -17,12 +16,12 @@
         <li><a href="./relacoes.html" >Relações</a></li>
         <li><a href="./jogo.html">Jogo</a></li>
         <li><a href="./recomendacoes.html">Recomendações</a></li>
-        <li><a href="./sobre.html" class="active">Sobre nós</a></li>
+        <li><a href="./sobrenos.html" class="active">Sobre nós</a></li>
       </ul>
     </nav>
   </div>
 
-  <!-- Imagem de fundo -->
+ 
   <div class="hero" style="background-image: url('./Imagens/planta2.png');">
     <div class="overlay">
       <h1>Dúvidas ou ideias podem ser enviadas via e-mail</h1>
@@ -33,9 +32,9 @@
     </div>
   </div>
 
-  <!-- Conteúdo inferior -->
+
   <div class="info-section">
-    <!-- Colaboradores -->
+
     <div class="info-block colaboradores">
       <h3>Nossos colaboradores</h3>
       <div class="colaboradores-linha">
@@ -54,7 +53,7 @@
       </div>
     </div>
 
-    <!-- Recursos -->
+
     <div class="info-block">
       <h3>Recursos utilizados</h3>
       <div class="resources">
@@ -67,7 +66,7 @@
       </div>
     </div>
 
-    <!-- Fontes -->
+
     <div class="info-block">
       <h3>Fontes</h3>
       <a href="https://www.todamateria.com.br/biologia/">Toda Matéria</a>
@@ -86,7 +85,7 @@
     </div>
   </div>
   
-  <!-- Importa o JavaScript -->
+
   <script src="./js/sobrenos.js"></script>
 
 </body>
