--- a/cooperacao.html
+++ b/cooperacao.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./CSS/cooperacao.css">
+  <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Comfortaa:wght@400;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <title>Cooperação</title>
 </head>
 <body>
-  <!-- Cabeçalho -->
+
   <div class="cabeçalho">
     <nav>
       <a href="./index.html"><img src="./Imagens/logo.png" alt="logo" class="logo"></a> 
@@ -15,9 +16,50 @@
         <li><a href="./relacoes.html" class="active">Relações</a></li>
         <li><a href="./jogo.html">Jogo</a></li>
         <li><a href="./recomendacoes.html">Recomendações</a></li>
-        <li><a href="./sobre.html">Sobre nós</a></li>
+        <li><a href="./sobrenos.html">Sobre nós</a></li>
       </ul>
     </nav>
   </div>
 
-  <h1>Cooperação</h1>
+  <div class="cooperacao">
+    <h1>Cooperação</h1>
+
+<div class="esquerda">
+    <p>Nesse ínterim, cooperação é definida como ação de duas ou mais pessoas ou grupos, com o objetivo 
+      de atingir um determinado fim, onde os participantes atuam de forma conjunta. Assim, esta é uma 
+      forma de trabalho colaborativo que exige comprometimento, confiança e responsabilidade mútua. A 
+      cooperação é uma forma de interação social, baseada na reciprocidade, e é uma característica 
+      fundamental do comportamento humano. É um termo amplo que pode ser usado para descrever uma variedade 
+      de formas de trabalho em conjunto.
+    </p>
+</div>
+<div class="direita">
+    <p>
+      Alguns exemplos incluem abelhas, formigas, pássaros e peixes, que se organizam em grupos para defesa, 
+      caça e divisão de trabalho. As formigas são um dos melhores exemplos de união na natureza.
+    </p>
+    <img src="./Imagens/Formigas.jpg" alt="Formigas">
+</div>
+<div class="soli">
+    <p>
+      As relações ecológicas acontecem a todo tempo, uma vez que é praticamente impossível um ser 
+      vivo existir sem interagir em algum momento com outro. Existem diferentes tipos de relações 
+      ecológicas, sendo algumas benéficas para todos os envolvidos, algumas benéficas para uns e 
+      indiferente para outros, e outras que causam algum tipo de prejuízo para uma das partes. 
+      Existem ainda as interações que envolvem apenas indivíduos da mesma espécie e aquelas que envolvem 
+      indivíduos de espécies diferentes.
+
+      <br><br> A protocooperação é uma relação do tipo interespecífica harmônica. Isso significa que essa 
+      relação ecológica ocorre entre organismos de espécies diferentes (interespecífica), e os organismos 
+      envolvidos são beneficiados com essa interação, não sendo nenhum prejudicado (harmônica).
+      
+      <br><br> A protocooperação é também denominada de mutualismo facultativo, isso porque os participantes 
+      beneficiam-se, mas vivem normalmente de forma independente. No mutualismo obrigatório, muitas vezes 
+      chamado apenas de mutualismo, verificamos uma relação obrigatória, na qual os indivíduos necessitam 
+      daquela interação. Um exemplo desse último caso são os líquens, em que verificamos a interação entre 
+      fungos e algas ou entre fungos e cianobactérias.
+    </p>
+</div>
+</div>
+</body>
+</html>
