--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MALK - Relações entre os Animais</title>
     <link rel="stylesheet" href="style.css">
+    <script> src="main.js" </script>
     <link rel="logo" href="./Imagens/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +28,7 @@
 
     <style>
         
-:root {
+        :root {
   --primary-color: #000;
   --secondary-color: #fff;
   --accent-color: #2e8b57;
@@ -54,7 +55,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 20px 50px;
+  padding: 1.25rem 3.125rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -65,7 +66,7 @@ header {
   font-family: var(--font-family-header);
   font-size: 1.5rem;
   font-weight: bold;
-  letter-spacing: 2px;
+  letter-spacing: 0.125rem;
   color: var(--secondary-color);
 }
 
@@ -75,7 +76,7 @@ nav ul {
 }
 
 nav ul li {
-  margin-left: 30px;
+  margin-left: 1.875rem;
 }
 
 nav ul li a {
@@ -113,23 +114,22 @@ nav ul li a:hover {
 }
 
 .hero-content {
-
   z-index: 2;
   width: 90%;
-  max-width: 800px;
-  padding: 100px;
+  max-width: 50rem;
+  padding: 6.25rem;
   background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(5px);
-  border-radius: 10px;
+  backdrop-filter: blur(0.3125rem);
+  border-radius: 0.625rem;
   text-align: left;
   position: relative;
-    left: 20;
+  left: 20;
 }
 
 .hero-content h1 {
   font-family: "Italiana", serif;
   font-size: 4rem;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   font-weight: 100;
   color: var(--secondary-color);
 }
@@ -137,16 +137,16 @@ nav ul li a:hover {
 .hero-content p {
   font-family: "Montserrat", serif;
   font-size: 1.5rem;
-  margin-bottom: 30px;
+  margin-bottom: 1.875rem;
 }
 
 .cta-button {
   display: inline-block;
-  padding: 12px 25px;
+  padding: 0.75rem 1.5625rem;
   background-color: var(--accent-color);
   color: var(--secondary-color);
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   font-weight: bold;
   transition: background-color 0.3s ease;
 }
@@ -165,259 +165,249 @@ nav ul li a:hover {
 }
 
 .leopard-left, .leopard-right {
-  width: 250px;
-  height: 170px;
+  width: 15.625rem;
+  height: 10.625rem;
   background-size: cover;
   background-position: center;
-  margin: 0 10px;
+  margin: 0 0.625rem;
 }
 
-
 .relacionamento-section {
-    background-color: var(--primary-color);
-    color: var(--text-color-light);
-    padding: 80px 50px;
-    max-width: 1200px;
-    margin: 0 auto;
-    text-align: left;
+  background-color: var(--primary-color);
+  color: var(--text-color-light);
+  padding: 5rem 3.125rem;
+  max-width: 75rem;
+  margin: 0 auto;
+  text-align: left;
 }
 
 .relacionamento-section h2 {
-    font-family: var(--font-family-header);
-    font-size: 3rem;
-    font-weight: 100;
-    margin-bottom: 40px;
-    color: var(--secondary-color);
+  font-family: var(--font-family-header);
+  font-size: 3rem;
+  font-weight: 100;
+  margin-bottom: 2.5rem;
+  color: var(--secondary-color);
 }
 
 .relacionamento-section p {
-    font-family: "Montserrat";
-    font-size: 1.5rem;
-    line-height: 1.8;
-    margin-bottom: 20px;
-    max-width: 900px;
+  font-family: "Montserrat";
+  font-size: 1.5rem;
+  line-height: 1.8;
+  margin-bottom: 1.25rem;
+  max-width: 56.25rem;
 }
 
 .relacionamento-section p strong {
-    font-weight: 700; 
+  font-weight: 700; 
 }
 
 .relacoes-button {
-    display: block; 
-    width: fit-content; 
-    padding: 12px 25px;
-    background-color: var(--accent-color);
-    color: var(--secondary-color);
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-    margin-top: 40px;
-    margin-left: auto; 
+  display: block; 
+  width: fit-content; 
+  padding: 0.75rem 1.5625rem;
+  background-color: var(--accent-color);
+  color: var(--secondary-color);
+  text-decoration: none;
+  border-radius: 0.3125rem;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
+  margin-top: 2.5rem;
+  margin-left: auto; 
 }
 
 .relacoes-button:hover {
-    background-color: #3cb371; 
+  background-color: #3cb371; 
 }
 
-@media (max-width: 768px) {
-    .relacionamento-section {
-        padding: 60px 20px;
-    }
-    .relacionamento-section h2 {
-        font-size: 2rem;
-    }
-    .relacionamento-section p {
-        font-size: 1rem;
-    }
-    .relacoes-button {
-        margin-left: 0;
-        width: 100%;
-        text-align: center;
-    }
+@media (max-width: 48rem) {
+  .relacionamento-section {
+    padding: 3.75rem 1.25rem;
+  }
+  .relacionamento-section h2 {
+    font-size: 2rem;
+  }
+  .relacionamento-section p {
+    font-size: 1rem;
+  }
+  .relacoes-button {
+    margin-left: 0;
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .contact-section {
-    position: relative;
-    width: 100%;
-    height: 400px; 
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: var(--secondary-color);
-    text-align: center;
+  position: relative;
+  width: 100%;
+  height: 25rem; 
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--secondary-color);
+  text-align: center;
 }
 
 .contact-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    filter: brightness(0.6);
-    z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  filter: brightness(0.6);
+  z-index: 1;
 }
 
 .contact-content {
-    position: relative;
-    z-index: 2;
-    padding: 20px;
-    max-width: 700px;
-    width: 90%;
+  position: relative;
+  z-index: 2;
+  padding: 1.25rem;
+  max-width: 43.75rem;
+  width: 90%;
 }
 
 .contact-content h3 {
-    font-family: var(--font-family-header);
-    font-size: 3rem;
-    font-weight: 100;
-    margin-bottom: 40px;
-    line-height: 1.3;
+  font-family: var(--font-family-header);
+  font-size: 3rem;
+  font-weight: 100;
+  margin-bottom: 2.5rem;
+  line-height: 1.3;
 }
 
 .form-group {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
+  display: flex;
+  justify-content: center;
+  gap: 0.9375rem;
 }
 
 .email-input {
-    padding: 15px 20px;
-    border: none;
-    border-radius: 5px;
-    width: 70%;
-    max-width: 400px;
-    font-size: 1rem;
-    background-color: rgba(255, 255, 255, 0.9);
-    color: var(--text-color-dark);
+  padding: 0.9375rem 1.25rem;
+  border: none;
+  border-radius: 0.3125rem;
+  width: 70%;
+  max-width: 25rem;
+  font-size: 1rem;
+  background-color: rgba(255, 255, 255, 0.9);
+  color: var(--text-color-dark);
 }
 
 .email-input::placeholder {
-    color: #888;
+  color: #888;
 }
 
 .send-button {
-    padding: 15px 30px;
-    background-color: var(--accent-color);
-    color: var(--secondary-color);
-    border: none;
-    border-radius: 5px;
-    font-family: "Comfortaa";
-    font-size: 1rem;
-    font-weight: bold;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  padding: 0.9375rem 1.875rem;
+  background-color: var(--accent-color);
+  color: var(--secondary-color);
+  border: none;
+  border-radius: 0.3125rem;
+  font-family: "Comfortaa";
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .send-button:hover {
-    background-color: #3cb371;
+  background-color: #3cb371;
 }
 
 footer {
-    background-color: #e0e0e0; 
-    color: var(--text-color-dark); 
-    padding: 50px 50px;
-    font-family: var(--font-family-body);
+  background-color: #e0e0e0; 
+  color: var(--text-color-dark); 
+  padding: 3.125rem 3.125rem;
+  font-family: var(--font-family-body);
 }
 
 .footer-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap; 
-    max-width: 1200px;
-    margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; 
+  max-width: 75rem;
+  margin: 0 auto;
 }
 
 .footer-column {
-    flex: 1; 
-    min-width: 200px; 
-    margin: 20px 10px;
-    color: #000;
+  flex: 1; 
+  min-width: 12.5rem; 
+  margin: 1.25rem 0.625rem;
+  color: #000;
 }
 
 .footer-column h4 {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-    font-weight: 700;
-    color: #000;
-    font-family: "Comfortaa";
-    font-weight: 100;
+  font-size: 1.2rem;
+  margin-bottom: 1.25rem;
+  font-weight: 700;
+  color: #000;
+  font-family: "Comfortaa";
+  font-weight: 100;
 }
 
 .footer-column ul {
-    list-style: none;
+  list-style: none;
 }
 
 .footer-column ul li {
-    margin-bottom: 10px;
-    font-size: 0.95rem;
-    font-family: "Montserrat", serif;
+  margin-bottom: 0.625rem;
+  font-size: 0.95rem;
+  font-family: "Montserrat", serif;
 }
 
 .footer-column ul li a {
-    color: var(--text-color-dark);
-    text-decoration: none;
-    transition: color 0.3s ease;
+  color: var(--text-color-dark);
+  text-decoration: none;
+  transition: color 0.3s ease;
 }
 
 .footer-column ul li a:hover {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .social-icons {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px; 
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.9375rem; 
 }
 
 .social-icons span img {
-    width: 24px; 
-    height: 24px;
-    filter: invert(30%); 
+  width: 1.5rem; 
+  height: 1.5rem;
+  filter: invert(30%); 
 }
 
-@media (max-width: 768px) {
-    .contact-content h3 {
-        font-size: 1.8rem;
-    }
-    .form-group {
-        flex-direction: column;
-        align-items: center;
-    }
-    .email-input, .send-button {
-        width: 90%;
-        max-width: 300px;
-    }
-    .footer-container {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        background-color: #E2F1EF;
-    }
-    .footer-column {
-        min-width: unset;
-        width: 100%;
-        margin: 20px 0;
-    }
-    .social-icons {
-        justify-content: center;
-    }
+@media (max-width: 48rem) {
+  .contact-content h3 {
+    font-size: 1.8rem;
+  }
+  .form-group {
+    flex-direction: column;
+    align-items: center;
+  }
+  .email-input, .send-button {
+    width: 90%;
+    max-width: 18.75rem;
+  }
+  .footer-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: #E2F1EF;
+  }
+  .footer-column {
+    min-width: unset;
+    width: 100%;
+    margin: 1.25rem 0;
+  }
+  .social-icons {
+    justify-content: center;
+  }
 }
+
     </style>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-    const btn = document.querySelector(".btn"); 
-    const target = document.querySelector("#relacoes"); 
 
-    btn.addEventListener("click", function(event) {
-      event.preventDefault(); 
-      target.scrollIntoView({ behavior: "smooth" }); 
-    });
-  });
-    </script>
 
 
     <main class="hero-section">
@@ -481,8 +471,9 @@ footer {
                     <li>Arthur Moreira</li>
                 </ul>
             </div>
-            <div class="footer-column">
-                <h4></h4> <ul>
+            <div class="footer-column"> 
+                <ul>
+                    <li></li>
                     <li>@yls.leo</li>
                     <li>@kauemm09</li>
                     <li>@theuzinx_fx</li>
