--- a/jogar.html
+++ b/jogar.html
@@ -4,9 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎮</title>
     <link rel="stylesheet" href="./CSS/jogar.css">
+    <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Comfortaa:wght@400;700&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Cabeçalho pronto -->
+  
     <div class="cabeçalho">
         <nav>
             <a href="./index.html"><img src="./Imagens/logo.png" alt="logo" class="logo"></a>
